tests/NormalTests/paczka2/big_fuzzy/63603822.err
Error in line 2: seIx3 S605 22,2
Error in line 1: i1MMt84Ja A121 58,3
Error in line 9: QR80vxCw S605 51,9
Error in line 11: i1MMt84Ja S605 92,5
Error in line 34: i1MMt84Ja A459 98,45
Error in line 24: i1MMt84Ja A121 21,1
Error in line 31: N6H S27 64,0
Error in line 53: S27eS27e39,9
Error in line 54: QR80vxCw S27 39,2
Error in line 57: QR80vxCw S605 238,34
Error in line 58: S27 S605 41,1
Error in line 67: i1MMt84Ja A459 71,5
Error in line 73: X2rC56Yz S27 48,0
Error in line 86: N6H S27 15,6
Error in line 81: seIx3 A459 42,2
Error in line 85: i1MMt84Ja S27 35,1
Error in line 96: N6H A121 46,6
Error in line 93: QR80vxCw S605 83,7
Error in line 111: i1MMt84Ja A121 258,8
Error in line 127: QR80vxCw S605 55,0
Error in line 132: BoSYZOo A459 54,3
Error in line 141: N6H A121 51,5
Error in line 137: S27 S27 77,4
Error in line 135: X2rC56Yz S27 20,8
Error in line 145: i1MMt84Ja A121 99,3
Error in line 155: N6H S605 29,9
Error in line 158: i1MMt84Ja S27 52,2
Error in line 164: seIx3 S27 36,6
Error in line 165: seIx3 A459 91,7
Error in line 179: S27 A459 52,8
Error in line 193: S27 S27 53,5
Error in line 203: N6H A459 98,8
Error in line 206: X2rC56Yz S27 363,4
Error in line 207: i1MMt84Ja S605 11,6
Error in line 209: X2rC56Yz S605 61,9
Error in line 213: X2rC56Yz S27 80,1
Error in line 208: N6H S27 238,1
Error in line 226: X2rC56Yz S27 70,4
Error in line 234: X2rC56Yz A121 70,6
Error in line 249: seIx3 S27 91,5
